# autowalk

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: config.yaml
src/server/: README.md  pyproject.toml
src/server/tests/walker/: test_cli.py
src/server/walker/: app.py  logging.py
src/server/walker/bp/: walks.py
src/server/walker/modules/: _base.py  runtime.py  trainer.py
src/server/walker/server/: app.py  config.py
src/server/walker/server/bp/: states.py  walks.py
src/server/walker/server/models/: _base.py  state.py  vector.py
src/server/walker/server/modules/: runtime.py  trainer.py
src/trainer/: README.md  pyproject.toml
src/ui/walker-ui/: .editorconfig
src/ui/walker-ui/Assets/: scene.unity
src/ui/walker-ui/Assets/Prefabs/Environment/: Wall.prefab
src/ui/walker-ui/Assets/Scripts/: Config.cs  Patrol.cs  Walker.cs
src/ui/walker-ui/Assets/Scripts/Agents/: BaseAgent.cs  PatrollingAgent.cs  TrainingAgent.cs
src/ui/walker-ui/Assets/scene/: NavMesh-Ground.asset  NavMesh-Middle 1.asset  NavMesh-Middle.asset  NavMesh-Roundabout.asset
src/ui/walker-ui/ProjectSettings/: NavMeshAreas.asset  ProjectSettings.asset
src/walker/: __main__.py  app.py  asgi.py  attrs.py  cli.py
src/walker/bp/: states.py
src/walker/models/: ray.py  speed.py  state.py  walk.py
src/walker/modules/: runtime.py  trainer.py
tests/walker/: test_cli.py
