[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "walker.server"
version = "0.1.0"
description = ""
authors = ["Etienne Landuré <25793763+etiennelndr@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "server", from = "walker" },
]

[tool.poetry.dependencies]
python = "~3.10"
typer = "0.9.0"
quart = "0.18.4"
confuse = "2.0.1"
uvicorn = {version = "0.23.2", extras = ["standard"]}
loguru = "0.7.0"
pydantic = "1.10.12"
quart-schema = "0.16.0"

[tool.poetry.group.dev.dependencies]
black = "23.9.1"
ruff = "0.0.290"
pytest = "7.4.2"
pytest-asyncio = "0.21.1"

[tool.poetry.scripts]
server = "walker.server.__main__:main"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "W", "F", "I", "PL"]
ignore = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black
line-length = 100

# Assume Python 3.10
target-version = "py310"
