[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "walker.trainer"
version = "0.1.0"
description = ""
authors = ["Etienne Landuré <25793763+etiennelndr@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "trainer", from = "walker" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
typer = "0.9.0"
numpy = "1.25.2"
torch = { version = "2.0.1", source = "pytorch-cuda118" }
flytekit = "1.9.1"

[tool.poetry.group.dev.dependencies]
black = "23.9.1"
ruff = "0.0.290"
pytest = "7.4.2"

[tool.poetry.scripts]
trainer = "walker.trainer.__main__:main"

[[tool.poetry.source]]
name = "pytorch-cuda118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "W", "F", "I", "PL"]
ignore = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black
line-length = 100

# Assume Python 3.10
target-version = "py310"
